--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -24,18 +24,15 @@ jobs:
           # REQUIRED: Specify the required boost version
           # A list of supported versions can be found here:
           # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
-          boost_version: 1.73.0
+          boost_version: 1.80.0
           # OPTIONAL: Specify a platform version
-          platform_version: 18.04
+          platform_version: 20.04
           # OPTIONAL: Specify a custom install location
-          boost_install_dir: /home/runner/some_directory
+          boost_install_dir: /
           # OPTIONAL: Specify a toolset
-          toolset: gcc
+          toolset: g++
           # OPTIONAL: Specify an architecture
           arch: x86
-
-          # NOTE: If a boost version matching all requirements cannot be found,
-          # this build step will fail
       
     - name: Run check
       run: make test
