--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -24,13 +24,13 @@ jobs:
           # REQUIRED: Specify the required boost version
           # A list of supported versions can be found here:
           # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
-          boost_version: 1.78.0
+          boost_version: 1.79.0
           # OPTIONAL: Specify a platform version
           platform_version: 20.04
           # OPTIONAL: Specify a custom install location
           boost_install_dir: /
           # OPTIONAL: Specify a toolset
-          toolset: g++
+          toolset: gcc
           # OPTIONAL: Specify an architecture
           arch: x86
       
