--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -28,7 +28,7 @@ jobs:
           # OPTIONAL: Specify a platform version
           platform_version: 20.04
           # OPTIONAL: Specify a custom install location
-          boost_install_dir: ./
+          boost_install_dir: ./include
           # OPTIONAL: Specify a toolset
           toolset: gcc
           # OPTIONAL: Specify an architecture
