--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -35,6 +35,5 @@ jobs:
           arch: x86
       
     - name: Run check
-      run: override CXXFLAGS := -I include/boost/boost $(CXXFLAGS)
-           make test
+      run: make CXXFLAGS='-I ./include/boost/boost' test
       
