--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -35,5 +35,5 @@ jobs:
           arch: x86
       
     - name: Run check
-      run: make CXXFLAGS='-I ./include/boost/boost' test
+      run: make CXXFLAGS='-I ./include/boost/boost -I ./include/boost/program_options -I ./include/boost/boost/program_options' test
       
