--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -34,12 +34,12 @@ jobs:
           # OPTIONAL: Specify an architecture
           arch: x86
           
-    - name: Configure G++
-      run:  cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build\
-            -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
-            -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib
+    - name: Configure CMake
+      run: cmake . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build
       env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+          env:
+              BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       
     - name: Run check
       run: make CXXFLAGS='-I ./include/boost/boost -I ${{steps.install-boost.outputs.BOOST_ROOT}} -L ${{steps.install-boost.outputs.BOOST_ROOT}}/lib' test
