--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -35,5 +35,5 @@ jobs:
           arch: x86
       
     - name: Run check
-      run: make CXXFLAGS='$(CXXFLAGS) -I ${{steps.install-boost.outputs.BOOST_ROOT}}' LDFLAGS='-L ${{steps.install-boost.outputs.BOOST_ROOT}}/lib' test
+      run: make CXXFLAGS='${CXXFLAGS} -I ${{steps.install-boost.outputs.BOOST_ROOT}}' LDFLAGS='-L ${{steps.install-boost.outputs.BOOST_ROOT}}/lib' test
       
