--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v3
@@ -26,13 +26,13 @@ jobs:
           # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
           boost_version: 1.79.0
           # OPTIONAL: Specify a platform version
-          platform_version: 18.04
+          platform_version: 22.04
           # OPTIONAL: Specify a custom install location
           boost_install_dir: ./include
           # OPTIONAL: Specify a toolset
           toolset: gcc
           # OPTIONAL: Specify an architecture
-          arch: x86
+          arch: aarch64
       
     - name: Run check
       run: make Boost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib Boost_USE_STATIC_RUNTIME=OFF BOOST_ROOT=${{ steps.install-boost.outputs.BOOST_ROOT }} CXXFLAGS='-g -Wall -I ${{steps.install-boost.outputs.BOOST_ROOT}}' LDFLAGS='-L /home/runner/work/CombinatorialIndexingPipeline/CombinatorialIndexingPipeline/${{steps.install-boost.outputs.BOOST_ROOT}}/lib' test
