--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -32,7 +32,12 @@ jobs:
           # OPTIONAL: Specify a toolset
           toolset: gcc
           # OPTIONAL: Specify an architecture
-          arch: aarch64
+          arch: x86
+          
+    - name: Configure Make
+      run: make . -DCMAKE_BUILD_TYPE=$BUILD_TYPE -B build
+      env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       
     - name: Run check
       run: make Boost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib Boost_USE_STATIC_RUNTIME=OFF BOOST_ROOT=${{ steps.install-boost.outputs.BOOST_ROOT }} CXXFLAGS='-g -Wall -I ${{steps.install-boost.outputs.BOOST_ROOT}}' LDFLAGS='-L /home/runner/work/CombinatorialIndexingPipeline/CombinatorialIndexingPipeline/${{steps.install-boost.outputs.BOOST_ROOT}}/lib' test
