--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -38,7 +38,8 @@ jobs:
       run: make .
       env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+          Boost_LIBRARY_DIRS: ${{steps.install-boost.outputs.BOOST_ROOT}}/lib
       
     - name: Run check
-      run: make Boost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib Boost_USE_STATIC_RUNTIME=OFF BOOST_ROOT=${{ steps.install-boost.outputs.BOOST_ROOT }} CXXFLAGS='-g -Wall -I ${{steps.install-boost.outputs.BOOST_ROOT}}' LDFLAGS='-L /home/runner/work/CombinatorialIndexingPipeline/CombinatorialIndexingPipeline/${{steps.install-boost.outputs.BOOST_ROOT}}/lib' test
+      run: make CXXFLAGS='-g -Wall -I ${{steps.install-boost.outputs.BOOST_ROOT}}' LDFLAGS='-L /home/runner/work/CombinatorialIndexingPipeline/CombinatorialIndexingPipeline/${{steps.install-boost.outputs.BOOST_ROOT}}/lib' test
       
