--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -37,8 +37,8 @@ jobs:
     - name: Configure Make
       run: make .
       env:
-          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-          Boost_LIBRARY_DIRS: ${{steps.install-boost.outputs.BOOST_ROOT}}/lib
+          BOOST_ROOT: /home/runner/work/CombinatorialIndexingPipeline/CombinatorialIndexingPipeline/${{ steps.install-boost.outputs.BOOST_ROOT }}
+          Boost_LIBRARY_DIRS: /home/runner/work/CombinatorialIndexingPipeline/CombinatorialIndexingPipeline/${{steps.install-boost.outputs.BOOST_ROOT}}/lib
       
     - name: Run check
       run: make CXXFLAGS='-g -Wall -I ${{steps.install-boost.outputs.BOOST_ROOT}}' LDFLAGS='-L /home/runner/work/CombinatorialIndexingPipeline/CombinatorialIndexingPipeline/${{steps.install-boost.outputs.BOOST_ROOT}}/lib' test
