RESTRUCTURE repository layout/ Makefile: LIB and TOOLS

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "include/edlib"]
 	path = include/edlib
 	url = https://github.com/martinsos/edlib
+[submodule "external/edlib"]
+	path = external/edlib
+	url = https://github.com/martinsos/edlib
