--- a/external/Makefile
+++ b/external/Makefile
@@ -4,7 +4,7 @@ CC=gcc
 CFLAGS=-g -Wall -O2 -Wno-unused-function
 BINDIR=/usr/local/bin
 
-WIN_SHIM =
+WIN_SHIM = rand_win.c
 ifeq ($(findstring MINGW, $(UNAME_S)),MINGW)
 	WIN_SHIM = rand_win.c
 endif
