--- a/external/Makefile
+++ b/external/Makefile
@@ -13,6 +13,11 @@ WIN_SHIM = rand_win.c
 #	WIN_SHIM = rand_win.c
 #endif
 
+ifeq ($(findstring MINGW, $(UNAME_S)),MINGW)
+	@echo "Patching seqtk.c to include rand_win.h..."
+	@sed -i '1i#ifdef _WIN32\n#include "rand_win.h"\n#endif' seqtk.c
+endif
+
 all: seqtk
 
 seqtk: seqtk.c rand_win.c khash.h kseq.h rand_win.h
