make ESGI run demultiplex and count / on windows compile ESGI without annotate which needs htslib

--- a/src/test/test_data/test_esgi/esgi_example.ini
+++ b/src/test/test_data/test_esgi/esgi_example.ini
@@ -30,6 +30,7 @@ FEATURE_ID=0
 FEATURE_NAMES=src/test/test_data/test_esgi/AB_NAMES.txt
 #ANNOTATION parameters are optionally if we have no additional annotations like treament conditions, batches, etc. encoded in a barcode
 ANNOTATION_IDs=
+#list of files, every file contains a list of annotations names in the same order as the barcodes for the specific annotation ID
 ANNOTATION_NAMES=
 #UMI_ID is optionally if we DO NOT want to collapse UMIs
 UMI_ID=7
@@ -45,13 +46,16 @@ threads=5
 # in this case there has to be a [-] element in the pattern, everything before is mapped sequentially to forward, after sequentially to reverse
 independent=0
 #custom file prefix, e.g., date of run, name, etc.
+#this prefix is added to the demultiplexed result, the tool count then add another prefix=COUNTDATA in front
 prefix=SIGNALseq
 writeFailedLines=1
 writeStats=1
 hamming=0
 #default is input.threads * 100000
 fastqReadBucketSize=500000
-umiFilter=0.0
+#filter to remove 'false' reads. It is a percentage x given as a value from [0-1[ 
+#reads are only retained if >x percent of reads with the SAME UMI have the SAME FEATURE-BARCODE and SINGLE-CELL ID
+umiThreshold=0.0
 umiCollapsing=1
 SC_ID_string=0
 # a file of barcodes that should be mapped to other barcodes, for more details look into the tool count
