running STAR and annotate, STAR has a minimal runnign version. annotate still to be implemented

--- a/src/test/test_data/test_esgi/esgi_example.ini
+++ b/src/test/test_data/test_esgi/esgi_example.ini
@@ -60,3 +60,13 @@ umiCollapsing=1
 SC_ID_string=0
 # a file of barcodes that should be mapped to other barcodes, for more details look into the tool count
 barcodeSharing=
+
+##############################
+# STAR ARGUMENTS
+##############################
+#optional path to the STAR executable to run
+STAR=
+#folder that holds the STAR genome index files, must be prebuild
+genomeDir=
+#the annotation of STAR that should be counted: GX=gene id, GN=gene name
+feature=GX
