changed threshold for collapsing UMIs, UMIs are collapsed if the leww abundant UMI has less than 20% reads of the high abundant one  tests still run with a threshold of 0.0 for backwards compatability, but the default value is set to 20% (see suppl. fig. regarding UMI counts in paper)

--- a/src/test/test_data/test_esgi/esgi_example.ini
+++ b/src/test/test_data/test_esgi/esgi_example.ini
@@ -56,6 +56,9 @@ fastqReadBucketSize=500000
 #filter to remove 'false' reads. It is a percentage x given as a value from [0-1[ 
 #reads are only retained if >x percent of reads with the SAME UMI have the SAME FEATURE-BARCODE and SINGLE-CELL ID
 umiThreshold=0.0
+# if two UMIs A and B are within the allowed edit-distance they are only collapsed if one of them has less than 20% of the reads of
+# the high-abundant UMI
+umiAbundance=0.2
 umiCollapsing=1
 SC_ID_string=0
 # a file of barcodes that should be mapped to other barcodes, for more details look into the tool count
