ESGI now runs demultiplex and count internqally and does not merely call the tools  better description of the ini input for ESGI

--- a/src/test/test_data/test_esgi/esgi_example.ini
+++ b/src/test/test_data/test_esgi/esgi_example.ini
@@ -17,22 +17,30 @@ output=bin
 # a file containing all possible patterns that can exist, please make sure all files are in the same directory 
 #(for compatability with the count tool which has only file names in the header of the inoput file and expects all barcodes in the same dir)
 pattern=src/test/test_data/test_esgi/pattern.txt
-# file containing all mismatches per pattern
+# file containing all mismatches, we define mismatches PER BARCODE-SEQUENCE and already here decide how many errors we allow in the UMI
+# for later UMI-alignment during UMI collapsing - e.g., here the last barcode-sequence [10X] gets 1MM, and this sequence is the UMI (UMI_ID=7)
+# this means we will align UMIs with 1MM for UMIs that encode the same FEATURE in the same SC during collapsing
+# even patterns like [*]/[-] must get a mismatch, you can enter anything, for exmaple 0
 mismatches=src/test/test_data/test_esgi/mismatches.txt
 
 # PARAMETERS DEFINING SC_ID=Columns for single cells, FEATURE_ID for feature column, etc.
 # indexing starts at 0 and taking EVERY pattern element in '[]' into consideration, even [-] or [*]
-# at least SC_ID (barcode to distinguish individual cells) and FEATURE_ID must be given to count barcodes that
-# encode a feature
+# at least SC_ID (barcode to distinguish individual cells) and FEATURE_ID must be given to count barcodes that encode a feature
+# in this example it is the combination of BC1,BC2_3,BC2_3 (see pattern.txt)
 SC_ID=2,4,6
+# the barcode-sequence that contains the feature (e.g., a nucleotide-sequence from AB-based technologies, RNA-sequence, etc...)
+# in this example it is BC_AB (see pattern.txt)
 FEATURE_ID=0
 # feature name is optionally if we have, e.g. RNA or want simple barcodes as features without mapping a barcode to a name like AGCAGCAT->EGFR_ANITBODY
 FEATURE_NAMES=src/test/test_data/test_esgi/AB_NAMES.txt
+# a list of files (separated by spaces or comma, e.g. file1.txt,file2.txt) - be careful when running only the tool count in the command line, then files for this parameter (-y) MUST BE WHITEDPACE-SEPARATED
 #ANNOTATION parameters are optionally if we have no additional annotations like treament conditions, batches, etc. encoded in a barcode
 ANNOTATION_IDs=
+# a list of files (separated by spaces or comma, e.g. file1.txt,file2.txt) - be careful when running only the tool count in the command line, then files for this parameter (-g) MUST BE WHITEDPACE-SEPARATED
 #list of files, every file contains a list of annotations names in the same order as the barcodes for the specific annotation ID
 ANNOTATION_NAMES=
-#UMI_ID is optionally if we DO NOT want to collapse UMIs
+# the index of the barcode-sequence that contains the UMI (0-indexed) - in this caase it is the last sequence [10x] - see pattern.txt
+#UMI_ID is optionally, if we DO NOT want to collapse UMIs it can be left blank
 UMI_ID=7
 
 ##############################
@@ -41,9 +49,13 @@ UMI_ID=7
 ##############################
 
 threads=5
-# default 0, means the reverse read is a 'true' reverse and we sequentially map the pattern from 5' to 3' of forward read and then continue
-# with reverse complement of reverse, set independent=1 if you want to continue mapping the reverse read independenlty from its own start (no reverse complement)
-# in this case there has to be a [-] element in the pattern, everything before is mapped sequentially to forward, after sequentially to reverse
+# default 0, means the reverse read is a 'true' reverse and we sequentially map the pattern from 5' to 3' of forward-read and then continue with the reverse complement of the reverse-read,
+# set independent=1 if you want to continue mapping the reverse-read independently from its forward-read (no reverse complement)
+# EXAMPLE: in this case there has to be a [-] element in the pattern, everything before is mapped sequentially to forward, after sequentially to reverse
+# e.g., if we set independent=1 and have the pattern [AAGCA][-][ACGGT][BC1.txt] the reverse reads should start with ACGGT and then BC1,
+# independent=0 (default) makes more sense when we DO NOT strictly separated where FW and RV-reads, e.g. [AAGCA][ACGGT][BC1.txt] expects the forward-read
+# to have the sequence AAGCA, ACGGT and finally BC1.txt and might end anywhere in the middle, 
+# then the reverse read would start with the revcomp(BC1), then revcomp(ACGGT) and finally revcomp(AAGCA), and again, might stop anywhere in the middle
 independent=0
 #custom file prefix, e.g., date of run, name, etc.
 #this prefix is added to the demultiplexed result, the tool count then add another prefix=COUNTDATA in front
@@ -55,12 +67,24 @@ hamming=0
 fastqReadBucketSize=500000
 #filter to remove 'false' reads. It is a percentage x given as a value from [0-1[ 
 #reads are only retained if >x percent of reads with the SAME UMI have the SAME FEATURE-BARCODE and SINGLE-CELL ID
+# e.g., we have a UMI AAAAA and for this UMI we have 95% reads for antibody-barcode A in single-cell X and 5% reads for antibody-barcode B in single-cell Y
+# if we would set this parameter to 0.8, we would only keep the 95% reads for antibody-barcode A in single-cell X
+# by default this filtering is turned off and all reads are retained
 umiThreshold=0.0
 # if two UMIs A and B are within the allowed edit-distance they are only collapsed if one of them has less than 20% of the reads of
-# the high-abundant UMI
+# the high-abundant UMI, e.g. if UMI A & B are 1MM away and we should collapse them, but UMI A has 600 reads and B 400 then we DO NOT collapse them,
+# but if A has 801 reads and B 199 we collapse B into A
+# default is 0.2
 umiAbundance=0.2
+# default 1: YES collapse UMIs, by setting this feature to 0 we TURN UMI-COllAPSING OFF
+# therefore, this overrides all previously set UMI settings (like umiAbundance, umiThreshold, the MM in mismtaches.txt)
 umiCollapsing=1
+# by default barcodes are mapped to numbers, so that we get SC-IDs in the final matrix like 1.50.99 for 3 barcodes
+# if set to 1 it is instead of a number-barcode the actual sequence-barcode like GACTCAG-GGCATA-GGAAAC in the final output
 SC_ID_string=0
+# This parameter is only needed for very specific experimental designs
+# some experiments have barcodes for different modalities, where different barcodes, however, come from the same cell
+# if these barcodes should then get the same SC-ID in the end we need to state it here 
 # a file of barcodes that should be mapped to other barcodes, for more details look into the tool count
 barcodeSharing=
 
